# sovereign-spec-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dashboard.py  factory_config.yaml  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/: architect.md  architect_plan.md  architect_task.md  developer.md  reviewer.md  rework.md
architecture-example/: domain_model.mmd  project_blueprint.md
cli/: commands.py  views.py
core/: __init__.py  aider_runner.py  git_utils.py  llm_client.py  model_manager.py  ollama_client.py  spec_manager.py
scaffolding/: engine.py  gitignore.py  registry.py  registry.yaml
scaffolding/ddd/: base.yaml
scaffolding/ddd/backend/: go-beego.yaml
scaffolding/ddd/frontend/: sveltekit.yaml
scaffolding/ddd/mobile/: android-kotlin.yaml
scaffolding/templates/: Makefile.j2
scaffolding/templates/go-beego/: go.mod.j2  main.go.j2
scaffolding/templates/go-beego/conf/: app.conf.j2
scaffolding/templates/kotlin-android/: build.gradle.kts.j2  settings.gradle.kts.j2
scaffolding/templates/kotlin-android/app/: build.gradle.kts.j2
scaffolding/templates/kotlin-android/gradle/: libs.versions.toml.j2
scaffolding/templates/sveltekit/: package.json.j2  vite.config.ts.j2
templates/: task_template.md
tests/core/: test_llm_client.py  test_model_manager.py
tests/scaffolding/: test_engine.py  test_gitignore.py  test_registry.py
