[project]
name = "sovereign-spec-ai"
version = "0.1.0"
description = "Local-first AI code factory driven by specifications and DDD."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "streamlit>=1.32.0",
    "gitpython>=3.1.41",
    "pyyaml>=6.0.1",
    "aider-chat>=0.20.0",
    "watchdog>=4.0.0",
]
