[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-spec-ai"
version = "0.1.0"
description = "Local-first AI code factory driven by specifications and DDD."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gitpython>=3.1.41",
    "pyyaml>=6.0.1",
    "aider-chat>=0.20.0",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
sovereign = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "cli", "scaffolding"]
artifacts = ["main.py"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]
